--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "./index.coffee",
   "version": "0.1.0",
   "description": "Helps navigating through AMD modules",
+  "repository": "https://github.com/zboro/amd-navigator",
   "activationCommands": {
     "atom-text-editor": "amd-navigator:go-to-module"
   },
